ANIM_OT_keyframe_delete_v3d Invalid Error/Warning with multiple objects #63090

Closed
opened 2019-03-29 14:00:08 +01:00 by Ovionis · 3 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 52), branch: master, commit date: 2019-03-29 00:43, hash: 99d4321fef

Short description of error
You have multiple objects in pose mode and you only select a bone from one of the objects.
If you press Alt + I >> Delete Keyframe, the keyframes for the selected bone will be removed.
However, an error box will pop up listing all the other objects in pose mode, telling you no keyframes were removed from them.

There should be a check for all the objects, where this error message is ONLY DISPLAYED if none of the objects successfully removed any keyframes.

delete single keyframes.blend

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 52), branch: master, commit date: 2019-03-29 00:43, hash: `99d4321fef` **Short description of error** You have multiple objects in pose mode and you only select a bone from one of the objects. If you press Alt + I >> Delete Keyframe, the keyframes for the selected bone will be removed. However, an error box will pop up listing all the other objects in pose mode, telling you no keyframes were removed from them. There should be a check for all the objects, where this error message is ONLY DISPLAYED if none of the objects successfully removed any keyframes. [delete single keyframes.blend](https://archive.blender.org/developer/F6898550/delete_single_keyframes.blend)
Author

Added subscriber: @Phigon

Added subscriber: @Phigon
Campbell Barton was assigned by Sebastian Parborg 2019-03-30 11:16:30 +01:00

This issue was referenced by 7fe81fe5a3

This issue was referenced by 7fe81fe5a320d9a4945a599ac4cb5af05f0b64e5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63090
No description provided.