Fix T63090: Delete keyframe reports invalid for multiple objects